--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Frontier DOOH 전국 DB v1.1.24</title> <!-- vNEXT: 버전 동기화 -->
+  <title>Frontier DOOH 전국 DB v1.1.25</title> <!-- vNEXT: 버전 동기화 -->
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -30,7 +30,7 @@
       --inputPh:rgba(255,255,255,.45);
 
       --topbarH:72px;
-      --sideW: 160px; /* vNEXT: 우측 빌딩 폭 40% 축소(268px -> 160px) */
+      --sideW: 161px; /* vNEXT: 우측 빌딩 너비 40% 축소(268px -> 약 60%) */
     }
 
     *{box-sizing:border-box}
@@ -540,27 +540,34 @@
       overflow:hidden;
     }
 
-    /* vNEXT: 빌딩(줌/장바구니/최근본) 단일 카드 + 칸 분리 */
-    .sideBuilding{ padding:0; }
-    .sidePart{ padding:10px; }
-    .sideDivider{ height:1px; background:rgba(255,255,255,.08); }
+    /* vNEXT: 줌/장바구니/최근본 “빌딩” 통합 */
+    .buildingCard{
+      display:flex;
+      flex-direction:column;
+      gap:0;
+    }
+    .buildingSec{
+      padding:10px;
+      border-bottom:1px solid rgba(255,255,255,.08);
+    }
+    .buildingSec:last-child{ border-bottom:none; }
 
     /* 줌 UI (← ZOOM 8 →) */
-    .zoomCard{ padding:0; } /* vNEXT: 빌딩 내부로 편입 */
+    .zoomCard{ padding:0; } /* vNEXT: 빌딩 섹션 padding으로 통일 */
     .zoomBar{
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:8px;
+      gap:8px; /* vNEXT: 좁은 폭 대응 */
       padding:6px;
-      border-radius:16px;
+      border-radius:14px;
       background:rgba(0,0,0,.18);
       border:1px solid rgba(255,255,255,.10);
     }
     .zNav{
-      width:36px; /* vNEXT: 축소폭 대응 */
+      width:38px; /* vNEXT: 축소폭 대응 */
       height:40px;
-      border-radius:14px;
+      border-radius:12px;
       border:1px solid rgba(162,222,204,.35);
       background:rgba(255,255,255,.06);
       color:#e9eef7;
@@ -570,7 +577,6 @@
       align-items:center;
       justify-content:center;
       user-select:none;
-      padding:0;
     }
     .zNav:active{ transform:translateY(1px); }
     .zLabel{
@@ -596,27 +602,29 @@
       letter-spacing:.6px;
     }
     .zLabel b{
-      font-size:13px;
+      font-size:14px;
       font-weight:1000;
       color:#e9eef7;
     }
 
     .sideSectionTitle{
-      padding:10px 10px; /* vNEXT: 축소폭 대응 */
-      border-bottom:1px solid rgba(255,255,255,.08);
+      padding:8px 10px;
+      border:1px solid rgba(255,255,255,.10);
+      border-radius:14px;
+      background:rgba(0,0,0,.18);
       font-weight:1000;
       color:#e9eef7;
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:8px;
-      font-size:12px; /* vNEXT: 축소폭 대응 */
+      gap:10px;
+      margin-bottom:10px;
     }
 
     /* 장바구니 버튼 */
     .cartBtn{
       width:100%;
-      height:46px;
+      height:44px;
       border-radius:14px;
       border:1px solid rgba(162,222,204,.55);
       background:rgba(162,222,204,.12);
@@ -630,52 +638,51 @@
       padding:0 12px;
       user-select:none;
     }
-    .cartBtn .meta{
-      display:flex; align-items:baseline; gap:8px;
-      color:rgba(255,255,255,.92);
-      font-weight:1000;
-      font-size:12px;
-      white-space:nowrap;
-    }
-    .cartBtn .meta b{
-      color:var(--mint);
-      font-weight:1000;
-      font-size:14px;
-      padding:2px 8px;
+    .cartCountPill{ /* vNEXT: '담김/가격' 제거, 숫자만 */
+      min-width:34px;
+      height:28px;
+      padding:0 10px;
       border-radius:999px;
+      border:1px solid rgba(255,255,255,.18);
       background:rgba(0,0,0,.22);
-      border:1px solid rgba(255,255,255,.12);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:1000;
+      color:var(--mint);
+      flex:0 0 auto;
     }
 
     /* 최근 본 매체 */
-    .recentBody{ padding:10px; display:flex; flex-direction:column; gap:10px; }
-    .recentList{ display:flex; flex-direction:column; gap:10px; }
+    .recentBody{ padding:0; display:flex; flex-direction:column; gap:10px; }
+    .recentList{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:10px;
+    }
 
-    /* vNEXT: 최근본 UI를 "상단 이미지 / 중단 매체명 / 하단 가격" 세로형으로 */
+    /* vNEXT: 최근본 “상단 이미지 / 중단 매체명 / 하단 가격” */
     .rRow{
       position:relative;
       display:flex;
-      flex-direction:column; /* vNEXT */
-      align-items:stretch;   /* vNEXT */
+      flex-direction:column;
       gap:8px;
-      padding:8px 8px 10px;
+      padding:8px;
       border-radius:14px;
       border:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.25);
+      background:rgba(0,0,0,.22);
       cursor:pointer;
       transition:transform .12s ease, border-color .12s ease;
-      min-height:0; /* vNEXT */
     }
     .rRow:hover{ transform:translateY(-1px); border-color:rgba(162,222,204,.30); }
 
     .rThumb{
-      width:100%;            /* vNEXT */
-      height:70px;           /* vNEXT */
+      width:100%;
+      height:78px;
       border-radius:12px;
       overflow:hidden;
       background:#0d0f10;
       border:1px solid rgba(255,255,255,.10);
-      flex:0 0 auto;
       position:relative;
     }
     .rThumb img{ width:100%; height:100%; object-fit:cover; display:block; }
@@ -687,18 +694,18 @@
       font-size:11px;
       letter-spacing:.4px;
     }
-    .rTxt{ min-width:0; flex:1 1 auto; }
+
     .rName{
       font-weight:1000;
       font-size:12px;
-      line-height:1.25;
+      line-height:1.2;
       color:#e9eef7;
-      display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;
+      white-space:nowrap;              /* vNEXT: 1줄 고정 */
       overflow:hidden;
-      margin-top:2px;
+      text-overflow:ellipsis;
     }
     .rPrice{
-      margin-top:6px;
+      margin-top:2px;
       font-weight:1000;
       font-size:12px;
       color:var(--mint);
@@ -706,9 +713,11 @@
       overflow:hidden;
       text-overflow:ellipsis;
     }
+
     .rX{
-      position:absolute; /* vNEXT */
-      top:8px; right:8px; /* vNEXT */
+      position:absolute;               /* vNEXT: 카드 우상단 고정 */
+      top:8px;
+      right:8px;
       width:28px;
       height:28px;
       border-radius:12px;
@@ -923,7 +932,7 @@
 
 <body>
   <div class="topbar" id="topbar">
-    <div class="titleLeft" id="titleReset">Frontier DOOH 전국 DB <span class="ver">v1.1.24</span></div> <!-- vNEXT: 버전 동기화 -->
+    <div class="titleLeft" id="titleReset">Frontier DOOH 전국 DB <span class="ver">v1.1.25</span></div> <!-- vNEXT: 버전 동기화 -->
     <div class="pill">Loaded: <b id="pillLoaded">0</b></div>
   </div>
 
@@ -981,9 +990,9 @@
         <div class="clusterHint" id="clusterHint">클릭해서 확대</div>
 
         <div class="mapSide" id="mapSide">
-          <!-- vNEXT: 줌/장바구니/최근본 매체를 "빌딩" 형태로 하나로 묶고 칸 분리 -->
-          <div class="sideCard sideBuilding">
-            <div class="sidePart">
+          <!-- vNEXT: 줌/장바구니/최근본 매체를 하나의 빌딩 카드로 통합 -->
+          <div class="sideCard buildingCard" id="sideBuilding">
+            <div class="buildingSec">
               <div class="zoomBar">
                 <button class="zNav" id="zOut" aria-label="줌 아웃">←</button>
                 <div class="zLabel" aria-label="현재 줌">
@@ -993,18 +1002,14 @@
               </div>
             </div>
 
-            <div class="sideDivider"></div>
-
-            <div class="sidePart">
+            <div class="buildingSec">
               <button class="cartBtn" id="cartBtn">
                 <span>장바구니</span>
-                <span class="meta"><b id="cartCount">0</b></span> <!-- vNEXT: '담김/가격' 제거, 숫자만 -->
+                <span class="cartCountPill" id="cartCount">0</span> <!-- vNEXT: 숫자만 -->
               </button>
             </div>
 
-            <div class="sideDivider"></div>
-
-            <div>
+            <div class="buildingSec">
               <div class="sideSectionTitle">
                 <span>최근 본 매체</span>
                 <span style="color:rgba(255,255,255,.55); font-size:12px; font-weight:900;" id="recentMeta">0/4</span>
@@ -1019,7 +1024,7 @@
               </div>
             </div>
           </div>
-          <!-- /빌딩 -->
+          <!-- /빌딩 카드 -->
         </div>
       </div>
     </div>
@@ -1081,17 +1086,15 @@
 
 <script>
   /* =========================================================
-     v1.1.24 변경점 (v1.1.22 기준 최소 변경)
-     1) moveend에서 viewportUpdate 중복 호출 차단(스케줄 1회) -> “롤링/흔들림” 제거 // vNEXT
-     2) 핀 클릭 시 리스트 중앙(3x3의 5번 체감) 정렬: 클릭에 의해서만 1회 실행 // vNEXT
-     3) 줌은 "표기만" 정수화(자동 보정/복귀 0 유지) // vNEXT
-     4) 우측 줌/장바구니/최근본을 빌딩 카드로 통합 + 폭 40% 축소 + UI 개선 // vNEXT
-     5) 장바구니 버튼: '장바구니' + 숫자만 유지(담김/가격 제거) // vNEXT
-     6) 최근본: 상단 이미지/중단 매체명/하단 가격 형태로 변경 // vNEXT
+     v1.1.25 변경점 (v1.1.22 기준 최소 변경)
+     1) 지도 moveend 리스트 잔상 제거: 지도 조작 시 패널 스크롤을 항상 최상단(0)으로 고정
+     2) 검색 시 지도 이동 복구: 검색 결과 중심으로 이동 + 줌 12 적용 (animate:false)
+     3) 클러스터 “드래곤볼(튀고-사라짐)” 방지: spiderfy/애니메이션/가시영역 외 제거 옵션 차단 + fitBounds animate:false
+     4) 장바구니 저장: sessionStorage로 전환 (탭/브라우저 닫으면 자동 초기화)
+     5) 우측 빌딩 UI 통합/축소 + 장바구니 숫자만 + 최근본 카드(상단이미지/중단명/하단가격) + 매체명 1줄 … 처리
      ========================================================= */
 
-  const VERSION = "v1.1.24"; // vNEXT: 내부 버전 상수
-
+  const VERSION = "v1.1.25"; // vNEXT: 내부 상수 버전 동기화
   const DATA_URL = "./data_public.json";
 
   const CATEGORY_TREE = [
@@ -1113,8 +1116,8 @@
 
   /* v1.1.22: 방향 반대로 (사용자 체감 반대) */
   const HOME_CENTER_SHIFT = {
-    upPct: -0.07,     // (기존 +0.07) -> 반대로
-    leftPct: -0.10    // (기존 +0.10) -> 반대로
+    upPct: -0.07,
+    leftPct: -0.10
   };
 
   function computeHomeCenter(){
@@ -1616,7 +1619,7 @@
     if (!el) return;
     el.classList.add("isActive");
     if (doScroll){
-      el.scrollIntoView({ block:"start", behavior:"auto" });
+      el.scrollIntoView({ block:"start", behavior:"auto" }); // vNEXT: 핀 클릭 시 좌상단(최상단) 고정 정렬
     }
   }
   function unhighlightCard(key){
@@ -1731,40 +1734,6 @@
     `;
   }
 
-  // vNEXT: 핀 클릭 시 리스트를 "중앙(5번 체감)"으로 1회 정렬 (클릭에 의해서만)
-  function scrollCardToCenter(key){
-    const panel = $("panel");
-    const card = cardByKey.get(key);
-    if (!panel || !card) return false;
-
-    const pr = panel.getBoundingClientRect();
-    const cr = card.getBoundingClientRect();
-    const current = panel.scrollTop;
-
-    const delta = (cr.top - pr.top) - (panel.clientHeight / 2 - cr.height / 2);
-    let target = current + delta;
-
-    const maxTop = Math.max(0, panel.scrollHeight - panel.clientHeight);
-    if (target < 0) target = 0;
-    if (target > maxTop) target = maxTop;
-
-    panel.scrollTop = target; // behavior:auto (즉시)
-    return true;
-  }
-
-  function centerCardOnClickOnce(key){
-    if (!key) return;
-    ensureCardVisible(key);
-
-    requestAnimationFrame(() => {
-      ensureCardVisible(key);
-      const ok = scrollCardToCenter(key);
-      if (!ok){
-        requestAnimationFrame(() => { scrollCardToCenter(key); });
-      }
-    });
-  }
-
   function openMiniPopupFor(it, marker){
     clearClusterHighlight();
 
@@ -1775,7 +1744,7 @@
 
     clearAllCardHighlights();
     ensureCardVisible(it._key);
-    highlightCard(it._key, false); // vNEXT: 자동 스크롤 금지(중앙정렬은 "클릭"에서만 별도 수행)
+    highlightCard(it._key, true); // vNEXT: 클릭에서만 “최상단(좌상단 체감)” 정렬
 
     try{
       marker.setPopupContent(miniPopupHtml(it));
@@ -1808,7 +1777,7 @@
         offset: L.point(0, -86)
       });
 
-      // v1.1.22: hover로 리스트를 “자동 스크롤 이동”하지 않는다 (어지럽다고 함)
+      // hover로 리스트를 자동 스크롤 이동하지 않는다
       m.on("mouseover", () => {
         if (isMapInteracting) return;
         setHoverKey(it._key);
@@ -1816,7 +1785,7 @@
 
         clearAllCardHighlights();
         ensureCardVisible(it._key);
-        highlightCard(it._key, false);   // <<< doScroll=false (중요)
+        highlightCard(it._key, false);
       });
 
       m.on("mouseout", () => {
@@ -1850,10 +1819,7 @@
           openDetail(it, true);
           return;
         }
-
         openMiniPopupFor(it, m);
-
-        centerCardOnClickOnce(it._key); // vNEXT: 핀 클릭에 의해서만 리스트 중앙 정렬(5번 체감)
       });
 
       m.on("popupclose", () => {
@@ -2249,7 +2215,7 @@
     viewportUpdate();
   }
 
-  // v1.1.22: 리스트 “롤링” 방지 핵심 -> scrollTop 보존/복구
+  // v1.1.25: 지도 조작(moveend) 시 잔상 제거 -> 스크롤 최상단 고정
   function viewportUpdate(){
     if (!map) return;
     const b = map.getBounds();
@@ -2263,14 +2229,11 @@
     $("mInView").textContent = inView.length;
 
     const panel = $("panel");
-    const st = panel ? panel.scrollTop : 0;
+    if (panel){
+      panel.scrollTop = 0; // vNEXT: 지도 이동으로 리스트가 바뀔 때 잔상 방지(항상 최상단)
+    }
 
     renderList(inView);
-
-    if (panel){
-      // 즉시 복구 (애니메이션 없음)
-      panel.scrollTop = st;
-    }
 
     if (activeMiniKey){
       ensureCardVisible(activeMiniKey);
@@ -2281,34 +2244,28 @@
     }
   }
 
-  // vNEXT: moveend/zoomend 연쇄에서 viewportUpdate가 2번 이상 실행되는 것을 방지(롤링 제거)
-  let _vpScheduled = false;
-  function scheduleViewportUpdate(){
-    if (_vpScheduled) return;
-    _vpScheduled = true;
-    requestAnimationFrame(() => {
-      _vpScheduled = false;
-      if (suspendViewportOnce) return;
-      viewportUpdate();
-    });
-  }
-
   function updateStickyHeights(){
     const topbar = $("topbar");
     const h = topbar ? topbar.getBoundingClientRect().height : 72;
     document.documentElement.style.setProperty("--topbarH", Math.round(h) + "px");
   }
 
-  // 줌 UI는 “정수”로만 표기 (표기만 정수화)
+  // 줌 UI는 “정수”로만 표기
   function updateZoomUI(){
     if (!map) return;
     const zi = Math.round(map.getZoom());
     $("zVal").textContent = zi;
   }
 
-  // vNEXT: 줌은 표기만 정수화(자동 보정/복귀 0) — setZoom 금지
+  // zoomend에서 정수 스냅 강제 (7.999999 방지)
   function forceIntegerZoom(){
-    updateZoomUI(); // vNEXT: 의도적으로 줌 자체는 건드리지 않음
+    if (!map) return;
+    const z = map.getZoom();
+    const zi = Math.round(z);
+    if (Math.abs(z - zi) > 1e-6){
+      try{ map.setZoom(zi, { animate:false }); }catch(_){}
+    }
+    updateZoomUI();
   }
 
   function showClusterHint(latlng){
@@ -2326,7 +2283,6 @@
   }
 
   function buildMap(){
-    // v1.1.22: zoomSnap/zoomDelta로 fractional zoom 억제
     map = L.map("map", {
       zoomControl:false,
       zoomSnap: 1,
@@ -2341,7 +2297,10 @@
 
     markers = L.markerClusterGroup({
       showCoverageOnHover:false,
-      spiderfyOnMaxZoom:true,
+      spiderfyOnMaxZoom:false,          // vNEXT: 드래곤볼(스파이더파이) 원천 차단
+      animate:false,                    // vNEXT: 클러스터/마커 애니메이션 차단(튀는 프레임 방지)
+      animateAddingMarkers:false,        // vNEXT: 추가 애니메이션 차단
+      removeOutsideVisibleBounds:false,  // vNEXT: 가시영역 밖 제거로 인한 “사라짐” 방지
       disableClusteringAtZoom: 18,
       maxClusterRadius: 52,
       zoomToBoundsOnClick:false
@@ -2375,19 +2334,13 @@
       clearAllCardHighlights();
       clearClusterHighlight();
 
-      suspendViewportOnce = true;
-      map.once("moveend", () => {
-        suspendViewportOnce = false;
-        forceIntegerZoom();
-      });
-
       const bb = e.layer && e.layer.getBounds ? e.layer.getBounds() : null;
 
       if (bb && bb.isValid && bb.isValid()){
-        map.fitBounds(bb, { padding:[90,90], maxZoom: 18 });
+        map.fitBounds(bb, { padding:[90,90], maxZoom: 18, animate:false }); // vNEXT: 확대 애니메이션 제거(튀는 프레임 방지)
       }else if (e.layer && e.layer.getLatLng){
         const ll = e.layer.getLatLng();
-        map.setView(ll, Math.min(map.getZoom() + 2, 18), { animate:false });
+        map.setView(ll, Math.min(map.getZoom() + 2, 18), { animate:false }); // vNEXT: animate:false
       }
     });
 
@@ -2414,8 +2367,8 @@
 
     map.on("moveend", () => {
       if (suspendViewportOnce) return;
-      scheduleViewportUpdate(); // vNEXT: 1회 스케줄로 롤링/흔들림 방지
-      updateZoomUI();           // vNEXT: moveend에서도 표기만 갱신(줌 강제 변경 없음)
+      viewportUpdate();
+      forceIntegerZoom();
     });
   }
 
@@ -2425,8 +2378,9 @@
       if (Array.isArray(r)) recentKeys = r.filter(x => typeof x === "string");
     }catch(_){ recentKeys = []; }
 
+    // vNEXT: 장바구니는 sessionStorage 사용(탭/브라우저 닫으면 자동 초기화)
     try{
-      const c = JSON.parse(localStorage.getItem(LS_CART) || "[]");
+      const c = JSON.parse(sessionStorage.getItem(LS_CART) || "[]");
       if (Array.isArray(c)) cartKeys = c.filter(x => typeof x === "string");
     }catch(_){ cartKeys = []; }
   }
@@ -2467,10 +2421,8 @@
         <div class="rThumb">
           ${it.thumb ? `<img src="${it.thumb}" alt="">` : `<div class="fallback">NO IMAGE</div>`}
         </div>
-        <div class="rTxt">
-          <div class="rName">${escapeHtml(it.title || "-")}</div>
-          <div class="rPrice">${escapeHtml(fmtWon(it.price, it.price_unit))}</div>
-        </div>
+        <div class="rName" title="${escapeHtml(it.title || "-")}">${escapeHtml(it.title || "-")}</div>
+        <div class="rPrice">${escapeHtml(fmtWon(it.price, it.price_unit))}</div>
         <div class="rX" title="제거">✕</div>
       `;
 
@@ -2497,7 +2449,8 @@
   }
 
   function saveCart(){
-    try{ localStorage.setItem(LS_CART, JSON.stringify(cartKeys)); }catch(_){}
+    // vNEXT: sessionStorage 저장
+    try{ sessionStorage.setItem(LS_CART, JSON.stringify(cartKeys)); }catch(_){}
     renderCartSummary();
   }
 
@@ -2531,10 +2484,10 @@
   function renderCartSummary(){
     const valid = cartKeys.filter(k => itemByKey.has(k));
     cartKeys = valid;
-    try{ localStorage.setItem(LS_CART, JSON.stringify(cartKeys)); }catch(_){}
+    // vNEXT: sessionStorage 저장 유지
+    try{ sessionStorage.setItem(LS_CART, JSON.stringify(cartKeys)); }catch(_){}
 
-    $("cartCount").textContent = String(cartKeys.length);
-    // vNEXT: 버튼에서 '가격' 표기를 제거했으므로 cartTotal DOM 업데이트는 생략
+    $("cartCount").textContent = String(cartKeys.length); // vNEXT: UI는 숫자만 유지
   }
 
   function openCartModal(){
@@ -2583,12 +2536,40 @@
   }
   function closeCartModal(){ $("cartModalOverlay").style.display = "none"; }
 
+  // v1.1.25: 검색 시 결과 인근으로 이동 + 줌 12 (animate:false)
+  function moveMapToSearch(base){
+    if (!map) return;
+    if (!Array.isArray(base) || !base.length) return;
+
+    // vNEXT: “검색에 의해서만” 실행되도록 applySearchFromUI에서만 호출
+    let lat = 0, lng = 0, n = 0;
+
+    for (const it of base){
+      const la = (it._latDisp ?? it.lat);
+      const ln = (it._lngDisp ?? it.lng);
+      if (typeof la !== "number" || typeof ln !== "number") continue;
+      lat += la; lng += ln; n += 1;
+    }
+    if (!n) return;
+
+    const center = [lat / n, lng / n];
+    try{
+      map.setView(center, 12, { animate:false }); // vNEXT: 검색 시 줌 12로 이동
+    }catch(_){}
+    forceIntegerZoom();
+  }
+
   function applySearchFromUI(){
     const qVal = $("q").value.trim();
     activeQuery = qVal;
     saveQueryHistory(activeQuery);
     const base = getFilteredBase();
     renderMarkersAndListFromBase(base);
+
+    // vNEXT: 검색 결과 인근으로 지도 이동 + 줌 12 (검색 클릭/Enter에서만)
+    if (qVal && base.length){
+      moveMapToSearch(base);
+    }
   }
 
   function applyHomeView(animate){
