--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Frontier DOOH 전국 DB</title>
 
-  <link rel="icon" href="data:,">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
@@ -13,423 +12,206 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"/>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-
   <style>
-    @import url('https://webfontworld.github.io/NanumSquare/NanumSquare.css');
-
     :root{
-      --bg:#0b0d10;
-      --panel:#11151b;
-      --panel2:#0f1319;
-      --line:rgba(255,255,255,.08);
-      --text:#e8eef7;
-      --muted:#9fb0c6;
-      --mint:#a2decc;
-      --shadow:0 12px 40px rgba(0,0,0,.55);
-      --radius:16px;
+      --bg:#0b0f14; --panel:#0f1620; --panel2:#0c121a; --line:#1b2736;
+      --text:#dbe6f5; --muted:#9fb0c9; --mint:#a2decc; --mint2:#72d6bd;
+      --danger:#ff5b5b;
+      --card:#101a25;
+      --shadow:0 10px 30px rgba(0,0,0,.35);
+      --radius:14px;
+      --radius2:18px;
+      --font: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", "Apple SD Gothic Neo", Arial, sans-serif;
     }
-
     *{ box-sizing:border-box; }
-    html,body{ height:100%; }
     body{
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
-      font-family:'NanumSquare',system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
+      margin:0; font-family:var(--font); background:var(--bg); color:var(--text);
       overflow:hidden;
     }
-
     .topbar{
-      height:54px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:0 16px;
-      border-bottom:1px solid var(--line);
-      background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,0));
+      position:sticky; top:0; z-index:20;
+      display:flex; align-items:center; justify-content:space-between;
+      padding:10px 14px;
+      background:linear-gradient(180deg, rgba(11,15,20,.98), rgba(11,15,20,.88));
+      border-bottom:1px solid rgba(162,222,204,.18);
+      backdrop-filter: blur(10px);
     }
-    .brand{
-      font-weight:800;
-      letter-spacing:.2px;
-      display:flex;
-      gap:10px;
-      align-items:baseline;
-    }
-    .brand small{
+    .brand{ font-weight:800; letter-spacing:.2px; }
+    .brand small{ color:var(--muted); font-weight:700; margin-left:8px; }
+    .pill{
       color:var(--muted);
       font-weight:700;
-      letter-spacing:.8px;
-    }
-    .pill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:6px 10px;
-      border:1px solid var(--line);
-      border-radius:999px;
+      font-size:13px;
       background:rgba(255,255,255,.03);
-      color:var(--muted);
-      font-size:12px;
-      user-select:none;
+      border:1px solid rgba(162,222,204,.18);
+      padding:7px 10px;
+      border-radius:999px;
     }
-    .pill b{ color:var(--text); }
-
     .app{
-      height:calc(100vh - 54px);
       display:grid;
-      grid-template-columns: 44% 56%;
-      gap:10px;
-      padding:10px;
+      grid-template-columns: 1fr 380px;
+      height: calc(100vh - 52px);
+      min-height: 560px;
     }
-
+    #map{ width:100%; height:100%; background:#0b0f14; }
     .panel{
-      background:radial-gradient(1100px 500px at 20% -20%, rgba(162,222,204,.10), transparent 55%),
-                 linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,0));
-      border:1px solid var(--line);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      overflow:hidden;
-      position:relative;
-      min-height:0;
-    }
-
-    .left{
+      height:100%;
+      background:linear-gradient(180deg, rgba(15,22,32,.98), rgba(12,18,26,.96));
+      border-left:1px solid rgba(162,222,204,.18);
+      box-shadow: var(--shadow);
       display:flex;
       flex-direction:column;
-      min-height:0;
     }
-
-    .filters{
-      padding:12px 12px 10px;
-      border-bottom:1px solid var(--line);
-      background:rgba(255,255,255,.02);
+    .panelHead{
+      padding:12px 12px 10px 12px;
+      border-bottom:1px solid rgba(162,222,204,.12);
     }
-    .filtersInner{
-      display:flex;
-      gap:10px;
-      align-items:center;
-      flex-wrap:wrap;
-    }
-    .q{
-      flex:1;
-      min-width:260px;
-      display:flex;
-      gap:8px;
-      align-items:center;
-      background:rgba(255,255,255,.03);
-      border:1px solid var(--line);
-      border-radius:12px;
-      padding:8px 10px;
-    }
-    .q input{
+    .row{ display:flex; gap:8px; align-items:center; }
+    .row + .row{ margin-top:8px; }
+    input[type="text"]{
       width:100%;
-      border:0;
-      outline:0;
-      background:transparent;
+      background:rgba(255,255,255,.03);
+      border:1px solid rgba(162,222,204,.18);
       color:var(--text);
-      font-size:14px;
-    }
-    .q button{
-      border:0;
-      cursor:pointer;
-      width:36px;
-      height:32px;
-      border-radius:10px;
-      background:rgba(162,222,204,.12);
-      color:var(--mint);
-      font-weight:900;
-    }
-
-    .cat{ width:240px; }
-    .catGroup{ width:220px; }
-    .catSub{ width:260px; }
-    @media(max-width:900px){
-      .cat,.catGroup,.catSub{ width:100%; }
-    }
-
-    select.cat{
-      border:1px solid var(--line);
+      padding:10px 10px;
       border-radius:12px;
+      font-weight:650;
+      outline:none;
+    }
+    input[type="text"]::placeholder{ color:rgba(159,176,201,.75); }
+    .btn{
+      border:1px solid rgba(162,222,204,.18);
       background:rgba(255,255,255,.03);
       color:var(--text);
       padding:10px 10px;
-      font-size:14px;
-      outline:0;
-    }
-    select.cat:disabled{
-      opacity:.55;
-      cursor:not-allowed;
-    }
-
-    button.btn{
-      border:1px solid var(--line);
       border-radius:12px;
-      background:rgba(255,255,255,.03);
-      color:var(--text);
-      padding:10px 12px;
-      font-size:14px;
+      font-weight:800;
       cursor:pointer;
       user-select:none;
     }
-    button.btn:hover{ border-color:rgba(162,222,204,.35); }
-
-    .counts{
-      display:flex;
-      gap:8px;
-      padding-top:10px;
-      flex-wrap:wrap;
+    .btn:hover{ border-color:rgba(162,222,204,.35); }
+    .btn.mint{
+      border-color:rgba(162,222,204,.45);
+      box-shadow: 0 0 0 1px rgba(162,222,204,.18) inset;
     }
-    .countPill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:6px 10px;
-      border:1px solid var(--line);
-      border-radius:999px;
-      background:rgba(255,255,255,.02);
+    select{
+      width:100%;
+      background:rgba(255,255,255,.03);
+      border:1px solid rgba(162,222,204,.18);
+      color:var(--text);
+      padding:10px 10px;
+      border-radius:12px;
+      font-weight:750;
+      outline:none;
+      appearance:none;
+    }
+    select:disabled{ opacity:.45; }
+    .metaLine{
       color:var(--muted);
       font-size:12px;
+      font-weight:700;
+      display:flex;
+      justify-content:space-between;
+      margin-top:8px;
     }
-    .countPill b{ color:var(--text); }
+    .metaLine b{ color:var(--text); }
 
     .listWrap{
-      flex:1;
+      padding:10px 10px 12px 10px;
       overflow:auto;
-      padding:12px;
-      min-height:0;
+      flex:1;
     }
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:12px;
-    }
-
     .card{
-      border:1px solid var(--line);
-      border-radius:14px;
-      background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));
-      overflow:hidden;
-      min-height:130px;
-      display:flex;
-      flex-direction:column;
+      background:rgba(16,26,37,.8);
+      border:1px solid rgba(162,222,204,.14);
+      border-radius:var(--radius);
+      padding:10px 10px;
+      margin-bottom:10px;
       cursor:pointer;
-      position:relative;
-      transition:transform .12s ease, border-color .12s ease;
+      transition: transform .12s ease, border-color .12s ease, box-shadow .12s ease;
     }
     .card:hover{
-      transform:translateY(-1px);
-      border-color:rgba(162,222,204,.35);
-      box-shadow:0 0 0 1px rgba(162,222,204,.08), 0 18px 40px rgba(0,0,0,.45);
+      transform: translateY(-1px);
+      border-color: rgba(162,222,204,.35);
+      box-shadow: 0 10px 22px rgba(0,0,0,.35);
     }
-    .thumb{
-      height:68px;
-      background:rgba(255,255,255,.02);
-      border-bottom:1px solid var(--line);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      color:rgba(255,255,255,.18);
-      font-weight:800;
-      letter-spacing:.8px;
-      font-size:12px;
-    }
-    .meta{
-      padding:10px 10px 12px;
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-    }
+    .card .t{ font-weight:900; font-size:14px; }
+    .card .s{ color:var(--muted); font-weight:700; font-size:12px; margin-top:4px; line-height:1.35; }
     .tagRow{
-      display:flex;
-      gap:6px;
-      flex-wrap:wrap;
+      display:flex; flex-wrap:wrap; gap:6px; margin-top:8px;
     }
     .tag{
-      font-size:11px;
-      padding:4px 8px;
+      font-size:11px; font-weight:800;
+      padding:5px 8px;
       border-radius:999px;
-      border:1px solid var(--line);
-      color:var(--muted);
-      background:rgba(255,255,255,.02);
-    }
-    .title{
-      font-weight:900;
-      font-size:14px;
-      line-height:1.2;
-    }
-    .sub{
-      font-size:12px;
-      color:var(--muted);
-      line-height:1.2;
-    }
-    .price{
-      font-weight:900;
+      background:rgba(162,222,204,.08);
+      border:1px solid rgba(162,222,204,.18);
       color:var(--mint);
-      font-size:13px;
-      margin-top:2px;
     }
 
-    .right{
-      position:relative;
-      min-height:0;
-    }
-    #map{
-      width:100%;
-      height:100%;
-    }
-
-    .zoomPanel{
-      position:absolute;
-      top:14px;
-      right:14px;
-      width:84px;
-      padding:10px;
-      border:1px solid var(--line);
-      border-radius:14px;
-      background:rgba(17,21,27,.88);
-      backdrop-filter: blur(8px);
-      box-shadow:var(--shadow);
-      z-index:999;
-    }
-    .zoomPanel .zTitle{
-      font-size:11px;
-      color:var(--muted);
-      font-weight:900;
-      letter-spacing:.8px;
-      margin-bottom:8px;
-    }
-    .zoomPanel .zRow{
-      display:flex;
-      gap:8px;
-      align-items:center;
-      justify-content:space-between;
-    }
-    .zoomPanel .zBtn{
-      width:28px;height:28px;
-      border-radius:10px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.03);
-      color:var(--text);
-      cursor:pointer;
-      font-weight:900;
-    }
-    .zoomPanel .zNum{
-      width:28px;
-      text-align:center;
-      color:var(--mint);
-      font-weight:900;
-    }
-
-    .sidePanel{
-      position:absolute;
-      top:120px;
-      right:14px;
-      width:110px;
-      padding:10px;
-      border:1px solid var(--line);
-      border-radius:14px;
-      background:rgba(17,21,27,.88);
-      backdrop-filter: blur(8px);
-      box-shadow:var(--shadow);
-      z-index:999;
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-    }
-    .miniBox{
-      border:1px solid var(--line);
-      border-radius:12px;
-      padding:8px 10px;
-      background:rgba(255,255,255,.02);
-      font-size:12px;
-      color:var(--muted);
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:10px;
-      user-select:none;
-    }
-    .miniBox b{ color:var(--text); }
-    .miniBtn{
-      width:100%;
-      border:1px solid rgba(162,222,204,.35);
-      background:rgba(162,222,204,.10);
-      color:var(--mint);
-      border-radius:12px;
-      padding:8px 10px;
-      cursor:pointer;
-      font-weight:900;
-      font-size:12px;
-    }
-
-    .modal{
-      position:fixed;
-      inset:0;
+    /* 에러 배너 */
+    .errBanner{
       display:none;
-      align-items:center;
-      justify-content:center;
-      background:rgba(0,0,0,.6);
-      z-index:2000;
+      position:fixed; left:12px; right:12px; bottom:12px;
+      background:rgba(255,91,91,.12);
+      border:1px solid rgba(255,91,91,.45);
+      color:#ffd9d9;
+      padding:10px 12px;
+      border-radius:14px;
+      z-index:50;
+      box-shadow: var(--shadow);
     }
-    .modal.on{ display:flex; }
-    .modalBox{
-      width:min(980px, 92vw);
-      max-height:88vh;
-      overflow:auto;
-      border:1px solid var(--line);
-      border-radius:18px;
-      background:rgba(17,21,27,.92);
-      backdrop-filter: blur(10px);
-      box-shadow:var(--shadow);
-      padding:16px;
+    .errBanner .x{
+      float:right; cursor:pointer; font-weight:900; opacity:.85;
     }
-    .modalHead{
-      display:flex;
-      justify-content:space-between;
-      align-items:flex-start;
-      gap:12px;
-      border-bottom:1px solid var(--line);
-      padding-bottom:10px;
-      margin-bottom:12px;
-    }
-    .modalHead h2{
-      margin:0;
-      font-size:18px;
-      font-weight:900;
-      line-height:1.2;
-    }
-    .modalHead .x{
-      width:36px;height:36px;
-      border-radius:12px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.03);
-      color:var(--text);
-      cursor:pointer;
-      font-weight:900;
-    }
-    .modalBody{
-      color:var(--muted);
-      font-size:13px;
-      line-height:1.6;
-    }
-    .kv{
-      display:grid;
-      grid-template-columns: 140px 1fr;
-      gap:8px 12px;
-      margin:10px 0 0;
-    }
-    .kv div{
-      padding:6px 0;
-      border-bottom:1px dashed rgba(255,255,255,.08);
-    }
-    .kv b{ color:var(--text); }
+    .errBanner code{ color:#fff; font-weight:800; }
 
-    @media(max-width:1080px){
-      .app{ grid-template-columns: 1fr; }
-      .panel.right{ height:44vh; }
+    /* 상세 모달 (앱에서 제어) */
+    #dOverlay{ display:none; position:fixed; inset:0; z-index:60; background:rgba(0,0,0,.55); }
+    #dModal{
+      display:none;
+      position:fixed; z-index:61;
+      right:14px; top:66px;
+      width: 520px; max-width: calc(100vw - 28px);
+      max-height: calc(100vh - 80px);
+      overflow:auto;
+      background:rgba(15,22,32,.98);
+      border:1px solid rgba(162,222,204,.22);
+      border-radius:18px;
+      box-shadow: 0 18px 44px rgba(0,0,0,.55);
+      padding:12px 12px;
+    }
+    .dHead{ display:flex; align-items:center; justify-content:space-between; gap:10px; }
+    .dHead .h{ font-weight:950; }
+    .dHead .x{ cursor:pointer; font-weight:900; opacity:.85; }
+    .dBody{ margin-top:10px; color:var(--muted); font-weight:700; font-size:13px; line-height:1.5; }
+    .dBtns{ margin-top:12px; display:flex; gap:8px; flex-wrap:wrap; }
+    .dBtns .btn{ flex:1; min-width: 160px; }
+
+    /* 클러스터 힌트 */
+    #clusterHint{
+      display:none;
+      position:absolute;
+      z-index:30;
+      padding:8px 10px;
+      border-radius:12px;
+      background:rgba(15,22,32,.92);
+      border:1px solid rgba(162,222,204,.22);
+      color:var(--text);
+      font-weight:800;
+      box-shadow: var(--shadow);
+      pointer-events:none;
+      transform: translate(-50%, -120%);
+      white-space:nowrap;
+    }
+
+    /* 모바일 */
+    @media (max-width: 980px){
       body{ overflow:auto; }
+      .app{ grid-template-columns: 1fr; height:auto; }
+      #map{ height: 56vh; min-height: 360px; }
+      .panel{ height:auto; border-left:none; border-top:1px solid rgba(162,222,204,.18); }
+      #dModal{ left:14px; right:14px; width:auto; top:72px; }
     }
   </style>
 </head>
@@ -441,67 +223,59 @@
   </div>
 
   <div class="app">
-    <div class="panel left">
-      <div class="filters">
-        <div class="filtersInner">
-          <div class="q">
-            <input id="q" placeholder="검색 (예: 강남구, 홍대, 전광판 ...)" autocomplete="off" />
-            <button id="btnSearch" title="검색">🔍</button>
-          </div>
+    <div id="map"></div>
 
+    <div class="panel">
+      <div class="panelHead">
+        <div class="row">
+          <input id="q" type="text" placeholder="검색 (예: 강남역, 신촌, 롯데백화점)" autocomplete="off"/>
+          <button id="btnSearch" class="btn mint">검색</button>
+          <button id="btnReset" class="btn">초기화</button>
+        </div>
+
+        <div class="row">
           <select id="catGroup" class="cat catGroup" aria-label="매체 카테고리(대분류)">
             <option value="">매체 카테고리(대분류)</option>
           </select>
           <select id="catSub" class="cat catSub" aria-label="하위 카테고리" disabled>
             <option value="">하위 카테고리(전체)</option>
           </select>
-
-          <button id="resetBtn" class="btn">초기화</button>
         </div>
 
-        <div class="counts">
-          <div class="countPill">리스트: <b id="cntList">0</b></div>
-          <div class="countPill">전체: <b id="cntAll">0</b></div>
-          <div class="countPill">필터: <b id="cntFiltered">0</b></div>
-          <div class="countPill">현재범위: <b id="cntInView">0</b></div>
+        <div class="metaLine">
+          <span>전체 <b id="mAll">0</b></span>
+          <span>필터 <b id="mFilter">0</b></span>
         </div>
       </div>
 
-      <div class="listWrap" id="listWrap">
-        <div class="grid" id="grid"></div>
-      </div>
-    </div>
-
-    <div class="panel right">
-      <div id="map"></div>
-
-      <div class="zoomPanel">
-        <div class="zTitle">ZOOM</div>
-        <div class="zRow">
-          <button class="zBtn" id="zOut">−</button>
-          <div class="zNum" id="zNum">8</div>
-          <button class="zBtn" id="zIn">＋</button>
-        </div>
-      </div>
-
-      <div class="sidePanel">
-        <div class="miniBox">장바구니 <b id="cartCnt">0</b></div>
-        <button class="miniBtn" id="openCart">장바구니 열기</button>
-        <div class="miniBox">최근 본 매체 <b id="recentCnt">0/4</b></div>
+      <div class="listWrap">
+        <div id="list"></div>
+        <div id="sentinel" style="height:1px;"></div>
       </div>
     </div>
   </div>
 
-  <div class="modal" id="modal">
-    <div class="modalBox">
-      <div class="modalHead">
-        <h2 id="modalTitle">상세</h2>
-        <button class="x" id="modalClose">✕</button>
-      </div>
-      <div class="modalBody" id="modalBody"></div>
+  <div id="clusterHint"></div>
+
+  <div class="errBanner" id="errBanner">
+    <span class="x" id="errClose">닫기</span>
+    <div id="errText"></div>
+  </div>
+
+  <div id="dOverlay"></div>
+  <div id="dModal">
+    <div class="dHead">
+      <div class="h" id="dTitle">상세</div>
+      <div class="x" id="dx">닫기</div>
+    </div>
+    <div class="dBody" id="dBody"></div>
+    <div class="dBtns">
+      <button id="dAddCart" class="btn mint">담기</button>
+      <button id="dGoCart" class="btn">장바구니</button>
     </div>
   </div>
 
-  <script src="./app.js?v=1.1.26"></script>
+  <!-- 중요: 캐시 방지용 쿼리만 변경 (버전 표기 자체는 유지) -->
+  <script src="./app.js?v=1.1.26-cat" defer></script>
 </body>
 </html>
