--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@
       padding:0 12px;
       user-select:none;
       font-size:14px;
+      white-space:nowrap;
       box-shadow:0 10px 24px rgba(0,0,0,.30);
     }
     .cartCountPill{
