hotfix: rollback index.html to backups v1.2.2 (remove gray UI theme)

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
   <style>
-   :root{
-  --bg:#1f2328;
-  --panel:#2a2f36;
-  --text:#e6e8eb;
-  --muted:#9aa1aa;
-  --line:rgba(255,255,255,.10);
-  --mint:#a2decc;
+    :root{
+      --bg:#0b0c0d;
+      --panel:#0f1011;
+      --text:#d8dde6;
+      --muted:#9aa6b2;
+      --line:rgba(255,255,255,.08);
+      --mint:#a2decc;
+      
+      --shadow:0 12px 30px rgba(0,0,0,.45);
+      --radius:16px;
 
-  --shadow:0 12px 30px rgba(0,0,0,.45);
-  --radius:16px;
+      --inputBg:#0c0e10;
+      --inputLine:rgba(255,255,255,.14);
+      --inputText:#ffffff;
+      --inputPh:rgba(255,255,255,.45);
 
-  --inputBg:#242a31;
-  --inputLine:rgba(255,255,255,.14);
-  --inputText:#f2f4f7;
-  --inputPh:rgba(255,255,255,.55);
-
-  --topbarH:72px;
-  --sideW:161px; /* v1.1.25: 우측 빌딩 너비 40% 축소 유지 */
-}
+      --topbarH:72px;
+      --sideW: 161px; /* v1.1.25: 우측 빌딩 너비 40% 축소 유지 */
+    }
 
     *{box-sizing:border-box}
     html, body{height:100%; overflow:hidden;}
@@ -1165,3 +1165,4 @@
   <script src="./app.js" defer></script>
 </body>
 </html>
+
